--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Select your best five</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <h1>hello dom</h1>
+<body class="bg-gray-900 text-white">
+    <header class="text-center mt-20">
+        <h1 id="site-name" class="text-6xl mb-8 text-orange-600">Select Your Best Five</h1>
+        <p class="text-xl ">The players are listed based on their performances over the year if you don’t
+            agree,
+            comment
+            us below. <br> Since
+            its emergence, soccer has produced some unbelievable players to the elegance of the beautiful game
+            throughout history.</p>
+    </header>
+
+
+    <script src="js/app.js"></script>
 </body>
 
 </html>
