--- a/index.html
+++ b/index.html
@@ -20,6 +20,96 @@
             its emergence, soccer has produced some unbelievable players to the elegance of the beautiful game
             throughout history.</p>
     </header>
+    <main class="mx-56 mt-24 ">
+        <div class="flex ">
+            <div class="grid grid-cols-3  w-3/4 ">
+                <div class="conatiner mx-auto text-center border-stone-500 border-2 mb-8">
+                    <img class="w-80" src="/images/Rectangle 144.jpg" alt="">
+                    <h1 id="player-1" class="mt-4">Lionel Messi</h1>
+                    <p class="text-gray-300">36 Goals . 120 Assist</p>
+                    <button onclick="selectPlayer(this);this.disabled = true;"
+                        class="bg-orange-600 py-1 px-24 my-4 btn-disabled-color">Select</button>
+                </div>
+                <div class="conatiner mx-auto text-center border-stone-500 border-2 mb-8">
+                    <img class="w-80" src="/images/Rectangle 144-1.jpg" alt="">
+                    <h1 id="player-2" class="mt-4">Neymar Jr</h1>
+                    <p class="text-gray-300">36 Goals . 120 Assist</p>
+                    <button onclick="selectPlayer(this);this.disabled = true;"
+                        class="bg-orange-600 py-1 px-24 my-4 btn-disabled-color">Select</button>
+                </div>
+                <div class="conatiner mx-auto text-center border-stone-500 border-2 mb-8">
+                    <img class="w-80" src="/images/Rectangle 144-2.jpg" alt="">
+                    <h1 id="player-3" class="mt-4">Kylian Mbappé</h1>
+                    <p class="text-gray-300">36 Goals . 120 Assist</p>
+                    <button onclick="selectPlayer(this);this.disabled = true;"
+                        class="bg-orange-600 py-1 px-24 my-4 btn-disabled-color">Select</button>
+                </div>
+                <div class="conatiner mx-auto text-center border-stone-500 border-2 mb-8">
+                    <img class="w-80" src="/images/Rectangle 144-3.jpg" alt="">
+                    <h1 id="player-4" class="mt-4">Vítor Machado</h1>
+                    <p class="text-gray-300">36 Goals . 120 Assist</p>
+                    <button onclick="selectPlayer(this);this.disabled = true;"
+                        class="bg-orange-600 py-1 px-24 my-4 btn-disabled-color">Select</button>
+                </div>
+                <div class="conatiner mx-auto text-center border-stone-500 border-2 mb-8">
+                    <img class="w-80" src="/images/Rectangle 144-4.jpg" alt="">
+                    <h1 id="player-5" class="mt-4">Sergio Ramos</h1>
+                    <p class="text-gray-300">36 Goals . 120 Assist</p>
+                    <button onclick="selectPlayer(this);this.disabled = true;"
+                        class="bg-orange-600 py-1 px-24 my-4 btn-disabled-color">Select</button>
+                </div>
+                <div class="conatiner mx-auto text-center border-stone-500 border-2 mb-8">
+                    <img class="w-80" src="/images/Rectangle 144-5.jpg" alt="">
+                    <h1 id="player-6" class="mt-4">Renato Sanches</h1>
+                    <p class="text-gray-300">36 Goals . 120 Assist</p>
+                    <button onclick="selectPlayer(this); this.disabled = true;"
+                        class="bg-orange-600 py-1 px-24 my-4 btn-disabled-color">Select</button>
+                </div>
+            </div>
+
+
+            <div class="grid grid-cols-1  w-1/4">
+                <div class="conatiner mx-auto  border-stone-500 border-2 mb-8">
+                    <h1 class="text-4xl px-16 pt-8 pb-8">Selected - <span id="playerCount"
+                            class="text-orange-400">0</span></h1>
+                    <div class="flex justify-center">
+                        <ol id="SelectedPlayerList" class="list-decimal text-white">
+
+                        </ol>
+                    </div>
+                </div>
+                <div class="conatiner mx-auto text-center border-stone-500 border-2 mb-8">
+                    <h1 class="text-4xl px-24 pt-8 pb-8">Budget</h1>
+                    <div class="flex justify-center ">
+                        <h2 class="text-base text-gray-400 font-medium pr-2">Per Player</h2>
+                        <input class="bg-gray-900 border-white border-2 w-1/2 h-8" type="text">
+
+                    </div>
+                    <button class="bg-orange-600 py-2 px-20 my-4">Calculate</button>
+
+
+                    <h2 class="text-xl text-gray-400 font-medium mt-4  text-center">Player Expenses <span
+                            class="pl-4">$0</span>
+                    </h2>
+                    <div class="flex justify-center  my-4">
+                        <h2 class="text-base text-gray-400 font-medium pr-3">Manager</h2>
+                        <input class="bg-gray-900 border-white border-2 w-1/2 h-8 ml-4" type="text">
+
+                    </div>
+                    <div class="flex justify-center ">
+                        <h2 class="text-base text-gray-400 font-medium pr-3">Coach</h2>
+                        <input class="bg-gray-900 border-white border-2 w-1/2 h-8 ml-8" type="text">
+
+                    </div>
+                    <button class="bg-orange-600 py-2 px-16 my-4">Calculate Total</button>
+                    <h2 class="text-xl text-gray-400 font-medium mt-4  text-center">Total <span
+                            class="pl-36">$0000</span>
+                    </h2>
+                </div>
+            </div>
+        </div>
+
+    </main>
 
 
     <script src="js/app.js"></script>
