common utilities and some comments are added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select your best five</title>
+    <!-- links -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,6 +21,8 @@
             its emergence, soccer has produced some unbelievable players to the elegance of the beautiful game
             throughout history.</p>
     </header>
+
+    <!-- main section start -->
     <main class="mx-56 mt-24 ">
         <div class="flex ">
             <div class="grid grid-cols-3  w-3/4 ">
@@ -110,10 +113,10 @@
                 </div>
             </div>
         </div>
-
     </main>
+    <!-- main section end -->
 
-
+    <script src="js/utilities.js"></script>
     <script src="js/app.js"></script>
 </body>
 
