new site name added and some text correction

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Select your best five</title>
+    <title>Select your champions</title>
     <!-- links -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
@@ -13,7 +13,7 @@
 
 <body class="bg-gray-900 text-white">
     <header class="text-center mt-20">
-        <h1 id="site-name" class="text-6xl mb-8 text-orange-600">Select Your Best Five</h1>
+        <h1 id="site-name" class="text-6xl mb-8 text-orange-600">Select Your champions</h1>
         <p class="text-xl ">The players are listed based on their performances over the year if you don’t
             agree,
             comment
@@ -43,28 +43,28 @@
                 <div class="conatiner mx-auto text-center border-stone-500 border-2 mb-8">
                     <img class="w-80" src="/images/Rectangle 144-2.jpg" alt="">
                     <h1 id="player-3" class="mt-4">Kylian Mbappé</h1>
-                    <p class="text-gray-300">36 Goals . 120 Assist</p>
+                    <p class="text-gray-300">35 Goals . 115 Assist</p>
                     <button onclick="selectPlayer(this);this.disabled = true;"
                         class="bg-orange-600 py-1 px-24 my-4 btn-disabled-color">Select</button>
                 </div>
                 <div class="conatiner mx-auto text-center border-stone-500 border-2 mb-8">
                     <img class="w-80" src="/images/Rectangle 144-3.jpg" alt="">
                     <h1 id="player-4" class="mt-4">Vítor Machado</h1>
-                    <p class="text-gray-300">36 Goals . 120 Assist</p>
+                    <p class="text-gray-300">33 Goals . 111 Assist</p>
                     <button onclick="selectPlayer(this);this.disabled = true;"
                         class="bg-orange-600 py-1 px-24 my-4 btn-disabled-color">Select</button>
                 </div>
                 <div class="conatiner mx-auto text-center border-stone-500 border-2 mb-8">
                     <img class="w-80" src="/images/Rectangle 144-4.jpg" alt="">
                     <h1 id="player-5" class="mt-4">Sergio Ramos</h1>
-                    <p class="text-gray-300">36 Goals . 120 Assist</p>
+                    <p class="text-gray-300">34 Goals . 118 Assist</p>
                     <button onclick="selectPlayer(this);this.disabled = true;"
                         class="bg-orange-600 py-1 px-24 my-4 btn-disabled-color">Select</button>
                 </div>
                 <div class="conatiner mx-auto text-center border-stone-500 border-2 mb-8">
                     <img class="w-80" src="/images/Rectangle 144-5.jpg" alt="">
                     <h1 id="player-6" class="mt-4">Renato Sanches</h1>
-                    <p class="text-gray-300">36 Goals . 120 Assist</p>
+                    <p class="text-gray-300">32 Goals . 120 Assist</p>
                     <button onclick="selectPlayer(this); this.disabled = true;"
                         class="bg-orange-600 py-1 px-24 my-4 btn-disabled-color">Select</button>
                 </div>
